# ai-gobang-web

./: .gitignore  README.md  db.sql
gobang-server/: CMakeLists.txt  main.cpp
gobang-server/db/: dbconn.cpp  dbconn.h
gobang-server/gobang/: ChessMove.h  GameRoom.cpp  GameRoom.h  GameRoomManager.cpp  GameRoomManager.h  UserConnection.cpp  UserConnection.h  ai_player.cpp  ai_player.h
gobang-server/model/: game.h  member.h  message.h  room.h  user.h
gobang-server/network/: http_server.cpp  http_server.h  websocket_server.cpp  websocket_server.h  ws_util.cpp  ws_util.h
gobang-server/service/: game_service.h  member_service.h  message_service.h  room_service.h  user_service.h
gobang-server/utils/: logger.cpp  logger.h  password_hash.h  safe_utils.h  token.h
gobang-web/src/pages/: GameRoom.vue  LobbyPage.vue  LoginPage.vue  RegisterPage.vue
gobang-web/src/utils/: api.js  ws.js
